# Novel-T

./: README.md  settings.gradle
PhysicaloidLibrary/: AndroidManifest.xml
app/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
hpatchalgo/: CMakeLists.txt  build.gradle
hpatchalgo/src/androidTest/assets/RRE_test/: RR_0.txt  RR_1.txt  RR_10.txt  RR_100.txt  RR_101.txt  RR_102.txt  RR_103.txt  RR_104.txt  RR_105.txt  RR_106.txt  RR_107.txt  RR_108.txt  RR_109.txt  RR_11.txt  RR_110.txt  RR_111.txt  RR_112.txt  RR_113.txt  RR_114.txt  RR_115.txt  RR_116.txt  RR_117.txt  RR_118.txt  RR_119.txt  RR_12.txt  RR_120.txt  RR_121.txt  RR_122.txt  RR_123.txt  RR_124.txt  RR_125.txt  RR_126.txt  RR_127.txt  RR_128.txt  RR_129.txt  RR_13.txt  RR_130.txt  RR_131.txt  RR_132.txt  RR_133.txt  (+104 more)
hpatchalgo/src/androidTest/assets/RREst_Test/: RREst_000.txt  RREst_001.txt  RREst_002.txt  RREst_003.txt  RREst_004.txt  RREst_005.txt  RREst_006.txt  RREst_007.txt  RREst_008.txt  RREst_009.txt  RREst_010.txt  RREst_011.txt  RREst_012.txt  RREst_013.txt  RREst_014.txt  RREst_015.txt  RREst_016.txt  RREst_017.txt  RREst_018.txt  RREst_019.txt  RREst_020.txt  RREst_021.txt  RREst_022.txt  RREst_023.txt  RREst_024.txt  RREst_025.txt  RREst_026.txt  RREst_027.txt  RREst_028.txt  RREst_029.txt  RREst_030.txt  RREst_031.txt  RREst_032.txt  RREst_033.txt  RREst_034.txt  RREst_035.txt  RREst_036.txt  RREst_037.txt  RREst_038.txt  RREst_039.txt  (+109 more)
hpatchalgo/src/androidTest/java/com/samsung/slsi/hpatchalgo/: HPatchAlgorithmWrapperInstrumentedTest.java  HRVTest.java  RRETest.java
hpatchalgo/src/main/: AndroidManifest.xml
hpatchalgo/src/main/cpp/: com_samsung_slsi_hpatchalgo_HPatchAlgorithmWrapper.cpp  com_samsung_slsi_hpatchalgo_HPatchAlgorithmWrapper.h  spatchalgorithms.h
hpatchalgo/src/main/cpp/ECGFitness/: ECGFitness_proc.cpp  ECGFitness_proc.h
hpatchalgo/src/main/cpp/ECGHRV/: ecg_freq_hrv_proc.cpp  ecg_freq_hrv_proc.h  ecg_hr_proc.cpp  ecg_hr_proc.h  ecg_hrv_pre_proc.cpp  ecg_hrv_pre_proc.h  ecg_hrv_proc.cpp  ecg_hrv_proc.h  ecg_time_hrv_proc.cpp  ecg_time_hrv_proc.h  lib_data.cpp  lib_data.h  lib_statistics.cpp  lib_statistics.h
hpatchalgo/src/main/cpp/LeadOnOff/: LeadOnOffDetect.cpp  LeadOnOffDetect.h
hpatchalgo/src/main/cpp/RREst/: InvMat.cpp  InvMat.h  berger.cpp  berger.h  common.cpp  common.h  hanning.h  invCoef.h  lib_RREst.cpp  lib_RREst.h  lib_fft.cpp  lib_fft.h  lib_matrix.cpp  lib_matrix.h  linearInt.cpp  linearInt.h  params.h  polyfit.cpp  polyfit.h  stdafx.h  targetver.h  usage.txt
hpatchalgo/src/main/java/com/samsung/slsi/hpatchalgo/: ECGFitness.java  HPatchAlgorithmWrapper.java
hpatchalgo/src/main/res/values/: strings.xml
hpatchalgo/src/test/java/com/samsung/slsi/hpatchalgo/: SPatchAlgorithmWrapperUnitTest.java
hpatchalgorithm/: build.gradle
hpatchdata/: build.gradle
hpatchdevice/: build.gradle
hpatchhost/: build.gradle  proguard-rules.pro
(+235 files in other folders)
